(chore): decrease the expiration time for the token and create a refresh token stored in cookie session